# browser-use-bridge

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  browser-use-bridge  pyproject.toml  run-state.json
.sprintfoundry/eval-results/: eval-result-12.md  eval-result-13.md  eval-result-14.md  eval-result-15.md  eval-result-16.md  eval-result-17.md
browser_use/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  tui.py
browser_use/agent/: __init__.py  controller.py  planner.py  retry.py  service.py  views.py
browser_use/agent/message_manager/: __init__.py
browser_use/browser/: __init__.py  events.py  session.py
browser_use/browser/watchdogs/: __init__.py
browser_use/dom/: __init__.py
browser_use/history/: __init__.py  exporter.py
browser_use/llm/: __init__.py  _openai_compatible.py  anthropic_adapter.py  openai_adapter.py
browser_use/llm/anthropic/: __init__.py
browser_use/llm/custom/: __init__.py
browser_use/llm/glm/: __init__.py
browser_use/llm/google/: __init__.py
browser_use/llm/kimi/: __init__.py
browser_use/llm/minimax/: __init__.py
browser_use/llm/ollama/: __init__.py
browser_use/llm/openai/: __init__.py
browser_use/llm/qwen/: __init__.py
browser_use/mcp/: __init__.py
browser_use/memory/: __init__.py  bm25_backend.py  chromadb_backend.py  store.py
browser_use/tools/: __init__.py
browser_use/tools/actions/: __init__.py
browser_use/vision/: __init__.py
browser_use_bridge/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  observability.py  tui.py
browser_use_bridge/agent/: __init__.py  controller.py  planner.py  retry.py  service.py  views.py
browser_use_bridge/agent/message_manager/: __init__.py
browser_use_bridge/browser/: __init__.py  events.py  pool.py  session.py  views.py
browser_use_bridge/browser/watchdogs/: __init__.py
browser_use_bridge/dom/: __init__.py
browser_use_bridge/history/: __init__.py  exporter.py
browser_use_bridge/humanize/: __init__.py  config.py  cursor.py  keyboard.py  wheel.py
browser_use_bridge/llm/: __init__.py  _openai_compatible.py  base.py  google_adapter.py
browser_use_bridge/llm/anthropic/: __init__.py
browser_use_bridge/llm/custom/: __init__.py
browser_use_bridge/llm/deepseek/: __init__.py
browser_use_bridge/llm/glm/: __init__.py
browser_use_bridge/mcp/: __init__.py
browser_use_bridge/memory/: __init__.py  bm25_backend.py  chromadb_backend.py  store.py
browser_use_bridge/runtime/: __init__.py  scheduler.py  session.py
browser_use_bridge/tools/: __init__.py
tests/: test_cli_sprint7.py  test_llm_sprint9.py  test_mcp_sprint8.py  test_sprint10.py  test_sprint11.py  test_sprint12.py  test_sprint13.py  test_sprint14.py  test_sprint15.py  test_sprint16.py  test_sprint17.py  test_sprint18.py  test_sprint19.py  test_sprint1_browser_pool.py  test_sprint21.py  test_sprint2_session_layer.py  test_sprint3_runtime_scheduler.py  test_tui.py
(+8 files in other folders)
