[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-use-bridge"
version = "1.1.0"
description = "AI browser automation bridge for Chinese LLMs, custom model providers, and OpenAI-compatible endpoints"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "YuSec2021", email = "gushangdianer@gmail.com" }
]
keywords = [
  "browser", "automation", "ai", "playwright", "llm",
  "chinese-llm", "kimi", "qwen", "glm", "minimax", "deepseek",
  "custom-model", "openai-compatible", "国产大模型", "浏览器自动化"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── 核心依赖（任何情况下都需要） ─────────────────────────────────────────
dependencies = [
  "playwright>=1.40.0",
  "pydantic>=2.0.0",
  "click>=8.1.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "aiofiles>=23.0.0",
  "textual>=0.50.0",
  "openai>=1.30.0",   # 同时作为 OpenAI-compatible API 的通用客户端
]

# ── 可选依赖：按需安装对应国产模型 SDK ────────────────────────────────────
[project.optional-dependencies]

# 安装所有国产模型 SDK：pip install "browser-use-bridge[cn]"
cn = [
  "dashscope>=1.20.0",          # 阿里云 Qwen / 通义千问
  "zhipuai>=2.1.0",             # 智谱 GLM
  "anthropic>=0.30.0",          # Anthropic Claude（境外）
]

# 单独安装各模型（也可按需组合）
kimi    = ["openai>=1.30.0"]    # Moonshot Kimi 兼容 OpenAI 接口，无需额外 SDK
qwen    = ["dashscope>=1.20.0"]
glm     = ["zhipuai>=2.1.0"]
minimax = ["openai>=1.30.0"]    # MiniMax 兼容 OpenAI 接口
deepseek = ["openai>=1.30.0"]   # DeepSeek 兼容 OpenAI 接口
ollama  = ["ollama>=0.2.0"]     # 本地 Ollama

# 开发 / 测试
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "build",
  "twine",
]

# 一键全装（国产模型 + 开发工具）
all = [
  "browser-use-bridge[cn,ollama,dev]",
]

# ── CLI 入口点 ─────────────────────────────────────────────────────────────
[project.scripts]
# 安装后可直接运行 `browser-use-bridge` 命令
browser-use-bridge = "browser_use_bridge.cli:main"

[project.urls]
Homepage   = "https://github.com/YuSec2021/browser-use-bridge"
Repository = "https://github.com/YuSec2021/browser-use-bridge"
"Bug Tracker" = "https://github.com/YuSec2021/browser-use-bridge/issues"

# ── 包发现 ─────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["browser_use_bridge*"]
exclude = [".venv*", "tests*", "examples*"]

[tool.setuptools.package-data]
browser_use_bridge = ["py.typed"]

# ── 测试配置 ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
